docs: Update Swagger documentation to change success response codes from 201 to 200
