# internal/chat/port/http/read_private_message_handler.go
@@ -25,7 +25,7 @@ func (r *ReadPrivateMessagesRequest) Bind(ginContext *gin.Context) error {
 // @Tags         Chat
 // @Security     BearerAuth
 // @Param        request  body      ReadPrivateMessagesRequest     true  "发送房间消息请求体"
-// @Success      201      {object}  api.Response     "发送成功"
+// @Success      200      {object}  api.Response     "发送成功"
 // @Router       /chats/private-messages/read [put]
 func NewReadPrivateMessagesHandler(useCase application.ReadPrivateMessagesUseCase, validator ginutils.Validator) gin.HandlerFunc {
 	return ginutils.AdaptUseCaseToHandler(
